add cache for get requests

--- a/api.yaml
+++ b/api.yaml
@@ -150,71 +150,71 @@ paths:
                 properties:
                   error:
                     type: string
-#    post:
-#      summary: Создание нового баннера
-#      parameters:
-#        - in: header
-#          name: token
-#          description: Токен админа
-#          schema:
-#            type: string
-#            example: "admin_token"
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              properties:
-#                tag_ids:
-#                  type: array
-#                  description: Идентификаторы тэгов
-#                  items:
-#                    type: integer
-#                feature_id:
-#                  type: integer
-#                  description: Идентификатор фичи
-#                content:
-#                  type: object
-#                  description: Содержимое баннера
-#                  additionalProperties: true
-#                  example: '{"title": "some_title", "text": "some_text", "url": "some_url"}'
-#                is_active:
-#                  type: boolean
-#                  description: Флаг активности баннера
-#      responses:
-#        '201':
-#          description: Created
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  banner_id:
-#                    type: integer
-#                    description: Идентификатор созданного баннера
-#        '400':
-#          description: Некорректные данные
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  error:
-#                    type: string
-#        '401':
-#          description: Пользователь не авторизован
-#        '403':
-#          description: Пользователь не имеет доступа
-#        '500':
-#          description: Внутренняя ошибка сервера
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  error:
-#                    type: string
+    post:
+      summary: Создание нового баннера
+      parameters:
+        - in: header
+          name: token
+          description: Токен админа
+          schema:
+            type: string
+            example: "admin_token"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                tag_ids:
+                  type: array
+                  description: Идентификаторы тэгов
+                  items:
+                    type: integer
+                feature_id:
+                  type: integer
+                  description: Идентификатор фичи
+                content:
+                  type: object
+                  description: Содержимое баннера
+                  additionalProperties: true
+                  example: '{"title": "some_title", "text": "some_text", "url": "some_url"}'
+                is_active:
+                  type: boolean
+                  description: Флаг активности баннера
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  banner_id:
+                    type: integer
+                    description: Идентификатор созданного баннера
+        '400':
+          description: Некорректные данные
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '401':
+          description: Пользователь не авторизован
+        '403':
+          description: Пользователь не имеет доступа
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
   /banner/{id}:
     patch:
       summary: Обновление содержимого баннера
@@ -285,45 +285,45 @@ paths:
                 properties:
                   error:
                     type: string
-#    delete:
-#      summary: Удаление баннера по идентификатору
-#      parameters:
-#        - in: path
-#          name: id
-#          required: true
-#          schema:
-#            type: integer
-#            description: Идентификатор баннера
-#        - in: header
-#          name: token
-#          description: Токен админа
-#          schema:
-#            type: string
-#            example: "admin_token"
-#      responses:
-#        '204':
-#          description: Баннер успешно удален
-#        '400':
-#          description: Некорректные данные
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  error:
-#                    type: string
-#        '401':
-#          description: Пользователь не авторизован
-#        '403':
-#          description: Пользователь не имеет доступа
-#        '404':
-#          description: Баннер для тэга не найден
-#        '500':
-#          description: Внутренняя ошибка сервера
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  error:
-#                    type: string
+    delete:
+      summary: Удаление баннера по идентификатору
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            description: Идентификатор баннера
+        - in: header
+          name: token
+          description: Токен админа
+          schema:
+            type: string
+            example: "admin_token"
+      responses:
+        '204':
+          description: Баннер успешно удален
+        '400':
+          description: Некорректные данные
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '401':
+          description: Пользователь не авторизован
+        '403':
+          description: Пользователь не имеет доступа
+        '404':
+          description: Баннер для тэга не найден
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
